samples/_failures_safe/1761553418_06f359_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c68bd70d.c: In function ‘main’:
./samples/SAFE/__tmp_c68bd70d.c:129:28: error: ‘input’ undeclared (first use in this function); did you mean ‘int’?
  129 |     memcpy(input_buf.data, input
      |                            ^~~~~
      |                            int
./samples/SAFE/__tmp_c68bd70d.c:129:28: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_c68bd70d.c:129:33: error: expected ‘)’ at end of input
  129 |     memcpy(input_buf.data, input
      |           ~                     ^
      |                                 )
./samples/SAFE/__tmp_c68bd70d.c:129:5: error: too few arguments to function ‘memcpy’
  129 |     memcpy(input_buf.data, input
      |     ^~~~~~
In file included from /usr/include/features.h:502,
                 from /usr/include/x86_64-linux-gnu/bits/libc-header-start.h:33,
                 from /usr/include/stdio.h:28,
                 from ./samples/SAFE/__tmp_c68bd70d.c:2:
/usr/include/x86_64-linux-gnu/bits/string_fortified.h:26:1: note: declared here
   26 | __NTH (memcpy (void *__restrict __dest, const void *__restrict __src,
      | ^~~~~
./samples/SAFE/__tmp_c68bd70d.c:129:5: error: expected declaration or statement at end of input
  129 |     memcpy(input_buf.data, input
      |     ^~~~~~
